k8s-dev/code-runner-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-runner-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: code-runner
  ports:
    - port: 5000
      targetPort: 5000
