k8s-dev/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api/
            backend:
              serviceName: code-execution-server-cluster-ip-service
              servicePort: 5000
